Refactored, added itemfunctionality